--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -44,6 +44,11 @@
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
