--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   latlong2: any
   flutter_dotenv: ^5.2.1
   geolocator: ^13.0.2
+  geolocator_android: ^4.6.1
   
 dev_dependencies:
   build_runner: ^2.4.0
