--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   latlong2: any
   flutter_dotenv: ^5.2.1
   geolocator: ^9.0.2
+  flutter_secure_storage: ^8.0.0
   
 dev_dependencies:
   build_runner: ^2.4.0
