--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>google-http-client-jackson2</artifactId>
             <version>1.40.1</version> <!-- Puedes ajustar a la última versión estable -->
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.3</version> <!-- Puedes cambiar a la última versión si es necesario -->
+        </dependency>
     </dependencies>
 
     <build>
