--- a/decibelio/src/main/resources/META-INF/microprofile-config.properties
+++ b/decibelio/src/main/resources/META-INF/microprofile-config.properties
@@ -1,4 +1,6 @@
 defaultRol= VISOR_GENERAL
 mqtt.broker.url=tcp://40.82.205.51:1883
-mqtt.topic=/UN_Lojanlo/HOPb0a7323594a2_NLO/attrs
+#mqtt.topic=/UN_Lojanlo/HOPb0a7323594a2_NLO/attrs
+mqtt.topic.ibelium=/UN_Lojanlo/{param}_NLO/attrs
 mqtt.clientId=jakarta-client
+mqtt.sensors=HOPb0a7323594a2,HOPx832afc23ab3,HOPa99dcb82aa2
