fix: Cleaned up user photo URL by removing whitespace and resizing to avoid 429 errors

--- a/decibelio/src/main/resources/META-INF/microprofile-config.properties
+++ b/decibelio/src/main/resources/META-INF/microprofile-config.properties
@@ -6,3 +6,4 @@ db.port.number=5432
 mqtt.topic.ibelium=/UN_Lojanlo/{param}_NLO/attrs
 mqtt.clientId=jakarta-client
 mqtt.sensors=HOPb0a7323594a2,HOPx832afc23ab3,HOPa99dcb82aa2
+export JWT_SECRET="una_clave_muy_segura_de_al_menos_32_bytes"
