--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.0.15
+  web_socket_channel: ^2.3.0
   
 dev_dependencies:
   build_runner: ^2.4.0
