--- a/decibelio/src/main/resources/META-INF/microprofile-config.properties
+++ b/decibelio/src/main/resources/META-INF/microprofile-config.properties
@@ -1,5 +1,5 @@
 defaultRol= VISOR_GENERAL
-mqtt.broker.url=tcp://40.82.205.51:1883
+mqtt.broker.url=tcp://test.mosquitto.org:1883
 db.server.name=localhost
 db.port.number=5432
 #mqtt.topic=/UN_Lojanlo/HOPb0a7323594a2_NLO/attrs
