feat: Added network configuration, healthcheck for PostgreSQL, and environment variables for decibelio-api service

--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -35,10 +35,15 @@ services:
     build:
       context: ../decibelio
       dockerfile: Dockerfile
+      args:
+        # Usa variable del archivo .env o del sistema
+        - ENV_DRIVER_JDBC_DIR=${DRIVER_JDBC_DIR}
     image: decibelio-api:latest
     restart: unless-stopped
     environment:
-      - DRIVER_JDBC_DIR=/config/
+      #- NAMESPACE=
+      #- DRIVER_JDBC_DIR=/config/
+      - DRIVER_JDBC_DIR=${DRIVER_JDBC_DIR} 
       - DB_SERVER_NAME=decibelio-db
       - DB_PORT_NUMBER=5432
       - DB_NAME=decibeliodb
