--- a/decibelio-deploy/.env
+++ b/decibelio-deploy/.env
@@ -1,6 +1,8 @@
 POSTGRES_VERSION=16.3-alpine
 DB_PORT_PUBLIC=5433
 LOCAL_DATA_DIR_BD=/home/cis/opt/docker-pgdata/decibelio
+#DRIVER_JDBC_DIR=target/lib/postgresql-42.7.3.jar
+DRIVER_JDBC_DIR=target/lib/*.jar
 
 POSTGRES_DB=decibelio
 POSTGRES_USER=postgres
