--- a/decibelio/.dockerignore
+++ b/decibelio/.dockerignore
@@ -1,5 +1,6 @@
 target/
 !target/*.war
+!target/lib/*
 #!target/liberty/wlp/usr/shared/resources/*
 !target/liberty/wlp/usr/servers/defaultServer/resources/*
 !target/liberty/wlp/usr/servers/defaultServer/lib/global/*
