--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -105,8 +105,7 @@
     </dependencies>
 
     <build>
-        <finalName>${final.name}</finalName>
-        <pluginManagement>
+            <finalName>${final.name}</finalName>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -114,40 +113,65 @@
                     <version>3.3.2</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.6.1</version>
+                    <executions>
+                        <execution>
+                            <id>copy-dependencies</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>copy</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>org.postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <!--<version>la-version</version>-->
+                                <type>jar</type>
+                                <overWrite>true</overWrite>
+                                <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                                <!--<destFileName>nombre-del-archivo.jar</destFileName>-->
+                            </artifactItem>
+                        </artifactItems>
+
+                    </configuration>
+                </plugin>
+                <!-- Enable liberty-maven plugin -->
+                <plugin>
                     <groupId>io.openliberty.tools</groupId>
                     <artifactId>liberty-maven-plugin</artifactId>
                     <version>3.10.3</version>
+                    <configuration>
+                        <!--
+                        <include>runnable</include>
+                        <serverName>${final.name}</serverName>
+                        <bootstrapProperties>
+                            <project.name>${final.name}</project.name>
+                            <jwt.issuer>https://server.example.com</jwt.issuer>
+                            <app.context.root>/</app.context.root>
+                        </bootstrapProperties>
+                        -->
+                        <copyDependencies>
+                            <dependencyGroup>
+                                <!--Funcionando con docker-compose-->
+                                <!--<location>lib/global</location>-->
+                                <location>${project.build.directory}/lib</location>
+                                <!--<location>${project.build.directory}/liberty/wlp/${shared.jdbc.dir}</location>-->
+                                <dependency>
+                                    <groupId>org.postgresql</groupId>
+                                    <artifactId>postgresql</artifactId>
+                                </dependency>
+                            </dependencyGroup>
+
+                        </copyDependencies>
+
+                    </configuration>
+
                 </plugin>
             </plugins>
-        </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>io.openliberty.tools</groupId>
-                <artifactId>liberty-maven-plugin</artifactId>
-
-                <configuration>
-                    <copyDependencies>
-                        <dependencyGroup>
-                            <!--Funcionando con docker-compose-->
-                            <location>lib/global</location>
-                        <dependency>
-                                <groupId>org.postgresql</groupId>
-                                <artifactId>postgresql</artifactId>
-                                <version>42.4.2</version>
-                            </dependency>
-                        </dependencyGroup>
-                    </copyDependencies>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <reportFormat>brief</reportFormat>
-                    <useFile>false</useFile>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+        </build>
 </project>
