--- a/decibelio/docker-compose.yml
+++ b/decibelio/docker-compose.yml
@@ -55,8 +55,7 @@ services:
     image: decibelio-api:latest
     environment:
       #- NAMESPACE=
-         #- DRIVER_JDBC_DIR=/config/
-      - DRIVER_JDBC_DIR=${DRIVER_JDBC_DIR} 
+      - DRIVER_JDBC_DIR=/config/
       - DB_SERVER_NAME=decibelio-db
       - DB_PORT_NUMBER=5432
       - DB_NAME=decibeliodb
