feat: Added GeoLocation and NoiseMeasurement classes with map conversion methods for serialization

--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -158,8 +158,8 @@
                         <copyDependencies>
                             <dependencyGroup>
                                 <!--Funcionando con docker-compose-->
-                                <!--<location>lib/global</location>-->
-                                <location>${project.build.directory}/lib</location>
+                                <location>lib/global</location>
+                               <!-- <location>${project.build.directory}/lib</location>-->
                                 <!--<location>${project.build.directory}/liberty/wlp/${shared.jdbc.dir}</location>-->
                                 <dependency>
                                     <groupId>org.postgresql</groupId>
