--- a/decibelio/src/main/resources/META-INF/microprofile-config.properties
+++ b/decibelio/src/main/resources/META-INF/microprofile-config.properties
@@ -2,8 +2,9 @@ defaultRol= VISOR_GENERAL
 mqtt.broker.url=tcp://test.mosquitto.org:1883
 db.server.name=localhost
 db.port.number=5432
+
 #mqtt.topic=/UN_Lojanlo/HOPb0a7323594a2_NLO/attrs
 mqtt.topic.ibelium=/UN_Lojanlo/{param}_NLO/attrs
 mqtt.clientId=jakarta-client
 mqtt.sensors=HOPb0a7323594a2,HOPx832afc23ab3,HOPa99dcb82aa2
-export JWT_SECRET="una_clave_muy_segura_de_al_menos_32_bytes"
+JWT_SECRET="una_clave_muy_segura_de_al_menos_32_bytes"
