--- a/decibelio/src/main/resources/META-INF/microprofile-config.properties
+++ b/decibelio/src/main/resources/META-INF/microprofile-config.properties
@@ -1,10 +1,18 @@
 defaultRol= VISOR_GENERAL
-mqtt.broker.url=tcp://test.mosquitto.org:1883
 db.server.name=localhost
 db.port.number=5432
 
+# Configuración MQTT
+mqtt.url=tcp://test.mosquitto.org:1883
 #mqtt.topic=/UN_Lojanlo/HOPb0a7323594a2_NLO/attrs
 mqtt.topic.ibelium=/UN_Lojanlo/{param}_NLO/attrs
-mqtt.clientId=jakarta-client
+mqtt.qos=1
+mqtt.clientId=decibelio-client
+#TIEMPO DE ESPERA DE CONEXIÓN (segundos)
+mqtt.options.timeout=15
+# INTERVALO DE KEEP-ALIVE (Frecuenca de mensajes) en segundos
+mqtt.options.keepAliveInterval=300
+// RETRASO MÁXIMO DE RECONEXIÓN en mili_segundos
+mqtt.options.maxReconnectDelay=120_000
 mqtt.sensors=HOPb0a7323594a2,HOPx832afc23ab3,HOPa99dcb82aa2
 JWT_SECRET="una_clave_muy_segura_de_al_menos_32_bytes"
