--- a/decibelio/src/main/resources/META-INF/microprofile-config.properties
+++ b/decibelio/src/main/resources/META-INF/microprofile-config.properties
@@ -2,17 +2,17 @@ defaultRol= VISOR_GENERAL
 db.server.name=localhost
 db.port.number=5432
 
-# Configuración MQTT
+# Configuraciï¿½n MQTT
 mqtt.url=tcp://test.mosquitto.org:1883
 #mqtt.topic=/UN_Lojanlo/HOPb0a7323594a2_NLO/attrs
 mqtt.topic.ibelium=/UN_Lojanlo/{param}_NLO/attrs
 mqtt.qos=1
 mqtt.clientId=decibelio-client
-#TIEMPO DE ESPERA DE CONEXIÓN (segundos)
+#TIEMPO DE ESPERA DE CONEXIï¿½N (segundos)
 mqtt.options.timeout=15
 # INTERVALO DE KEEP-ALIVE (Frecuenca de mensajes) en segundos
 mqtt.options.keepAliveInterval=300
-// RETRASO MÁXIMO DE RECONEXIÓN en mili_segundos
-mqtt.options.maxReconnectDelay=120_000
+// RETRASO Mï¿½XIMO DE RECONEXIï¿½N en mili_segundos
+mqtt.options.maxReconnectDelay=120000
 mqtt.sensors=HOPb0a7323594a2,HOPx832afc23ab3,HOPa99dcb82aa2
 JWT_SECRET="una_clave_muy_segura_de_al_menos_32_bytes"
