--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       image: nginx:stable-alpine
       restart: unless-stopped
       volumes:
-        - decibelio-web-bind:/usr/share/nginx/html:ro
+        - decibelio-web-bind:/usr/share/nginx/html:rw
         - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
       ports:
         - 80:80 
