--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -51,9 +51,18 @@ services:
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI}
+      - WLP_LOGGING_CONSOLE_FORMAT=json  # Envía también a stdout
+      - WLP_LOGGING_CONSOLE_SOURCE=message
     ports:
       - "9080:9080"
       - "9443:9443"
+    volumes:
+      - decibelio-api-logs:/logs
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     depends_on:
       - decibelio-db
     deploy:
@@ -75,8 +84,7 @@ services:
         - decibelio-web-bind:/usr/share/nginx/html:rw
         - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
       ports:
-        - 80:80 
-      
+        - 80:80
       depends_on:
         - decibelio-api
       deploy:
@@ -117,4 +125,11 @@ volumes:
     driver_opts:
       type: none
       device: ../decibelio_app_web/nginx.conf
+      o: bind
+  decibelio-api-logs:
+    name: decibelio-api-logs
+    driver: local
+    driver_opts:
+      type: none
+      device: ${LOCAL_LOGS_DIR_API}
       o: bind
