--- a/decibelio-deploy/docker-compose.yml
+++ b/decibelio-deploy/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - "9443:9443"
     volumes:
       - decibelio-api-logs:/logs
-      #- /etc/timezone:/etc/timezone:ro
+      - /etc/timezone:/etc/timezone:ro
       #- /etc/localtime:/etc/localtime:ro
     logging:
       driver: "json-file"
@@ -85,7 +85,7 @@ services:
       volumes:
         - decibelio-web-bind:/usr/share/nginx/html:rw
         - ../decibelio_app_web/nginx.conf:/etc/nginx/nginx.conf:ro
-        #- /etc/timezone:/etc/timezone:ro
+        - /etc/timezone:/etc/timezone:ro
         #- /etc/localtime:/etc/localtime:ro
       ports:
         - 80:80
