--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -28,9 +28,9 @@ http {
         }
 
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
-            expires 6M;
+            expires 1d; 
             access_log off;
-            add_header Cache-Control "public, max-age=15552000";
+            add_header Cache-Control "public, max-age=86400";
             try_files $uri =404;
         }
 
@@ -41,7 +41,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        
         error_page 404 /decibelio/index.html;
     }
 
