--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,5 +1,6 @@
-events { }
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
     server {
         listen 80;
@@ -12,7 +13,12 @@ http {
             try_files $uri $uri/ /decibelio/index.html;
         }
 
-        location /decibelio/flutter_bootstrap.js {
+        location = /decibelio/flutter_bootstrap.js {
+            add_header Content-Type application/javascript;
+            try_files $uri =404;
+        }
+
+        location = /decibelio/flutter_service_worker.js {
             add_header Content-Type application/javascript;
             try_files $uri =404;
         }
@@ -28,7 +34,7 @@ http {
         }
 
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
-            expires 1d; 
+            expires 1d;
             access_log off;
             add_header Cache-Control "public, max-age=86400";
             try_files $uri =404;
@@ -41,8 +47,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        
+
         error_page 404 /decibelio/index.html;
     }
-
 }
