--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,6 +1,5 @@
+events { }
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
 
     server {
         listen 80;
@@ -13,12 +12,7 @@ http {
             try_files $uri $uri/ /decibelio/index.html;
         }
 
-        location = /decibelio/flutter_bootstrap.js {
-            add_header Content-Type application/javascript;
-            try_files $uri =404;
-        }
-
-        location = /decibelio/flutter_service_worker.js {
+        location /decibelio/flutter_bootstrap.js {
             add_header Content-Type application/javascript;
             try_files $uri =404;
         }
@@ -34,7 +28,7 @@ http {
         }
 
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
-            expires 1d;
+            expires 1d; 
             access_log off;
             add_header Cache-Control "public, max-age=86400";
             try_files $uri =404;
@@ -47,7 +41,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        
         error_page 404 /decibelio/index.html;
     }
+
 }
