feat: Configured NGINX server for Flutter web app with HTML5 routing, CORS, and manifest handling

--- a/decibelio_app_web/nginx.conf
+++ b/decibelio_app_web/nginx.conf
@@ -1,48 +1,57 @@
 events { }
-http {
 
+http {
     server {
         listen 80;
-        server_name computacion.unl.edu.ec;
+        server_name decibelio.westus2.cloudapp.azure.com;
 
+        # Carpeta donde está tu build de Flutter / SPA
         root /usr/share/nginx/html;
         index index.html;
 
-        location /decibelio/ {
-            try_files $uri $uri/ /decibelio/index.html;
+        # Todas las rutas (HTML5 mode) apuntan a index.html
+        location / {
+            try_files $uri $uri/ /index.html;
         }
 
-        location /decibelio/flutter_bootstrap.js {
+        # Mime type para el bootstrap de Flutter
+        location = /flutter_bootstrap.js {
             add_header Content-Type application/javascript;
             try_files $uri =404;
         }
 
-        location /decibelio/manifest.json {
+        # Manifest y CORS
+        location = /manifest.json {
             add_header Content-Type application/json;
             add_header Access-Control-Allow-Origin *;
             try_files $uri =404;
         }
 
-        location /decibelio/favicon.png {
+        # Favicon
+        location = /favicon.png {
             try_files $uri =404;
         }
 
+        # Archivos estáticos con cache
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|woff2?|eot|ttf|svg|otf|wasm|json)$ {
-            expires 1d; 
+            expires 1d;
             access_log off;
-            add_header Cache-Control "public, max-age=86400";
+            add_header Cache-Control "public, max-age=86400, immutable";
             try_files $uri =404;
         }
 
+        # Proxy para la API Java
         location /api/ {
-            proxy_pass http://decibelio-api:9080/decibelio/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass         http://decibelio-api:9080/decibelio/api/;
+            proxy_http_version 1.1;
+            proxy_set_header   Host              $host;
+            proxy_set_header   X-Real-IP         $remote_addr;
+            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   Connection        "";
         }
-        
-        error_page 404 /decibelio/index.html;
-    }
 
+        # Captura 404 de la SPA y redirige a index.html
+        error_page 404 /index.html;
+    }
 }
