--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -19,38 +19,37 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.3
+  sdk: '>=3.8.1 <4.0.0'  # Actualizado para Dart 3.8.1
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  flutter_map: ^7.0.2
-  flutter_map_cancellable_tile_provider: ^3.0.2
-  flutter_svg: ^2.0.10+1
-  flutter_bloc: ^8.1.6
+  flutter_map: ^8.2.1  # Actualizado para Flutter 3.32.6
+  flutter_svg: ^2.0.7
+  flutter_bloc: ^9.1.1  # Actualizado mayor versión
   provider: ^6.0.2
-  file_picker: ^5.0.0
+  file_picker: ^10.2.0  # Versión estable actual
   flutter_dropzone: ^4.0.2
   badges: ^3.1.2
   equatable: ^2.0.5
   adaptive_theme: ^3.6.0
   google_fonts: ^6.2.1
-  fl_chart: ^0.70.2
-  intl: ^0.17.0
+  fl_chart: ^1.0.0  # Versión estable actual
+  intl: ^0.20.2  # Actualizado para Dart 3.8.1
   http: ^1.3.0
-  bloc: any
-  latlong2: any
+  bloc: ^9.0.0  # Ya no usar 'any'
+  latlong2: ^0.9.0  # Ya no usar 'any'
   flutter_dotenv: ^5.2.1
-  geolocator: ^9.0.2
-  flutter_secure_storage: ^8.0.0
-  shared_preferences: ^2.0.15
-  logger: ^2.0.0
+  geolocator: ^14.0.2  # Compatible con Flutter 3.32.6
+  flutter_secure_storage: ^9.2.4  # Versión actual
+  shared_preferences: ^2.2.2  # Versión actual
+  logger: ^2.6.0
+  xml: ^6.2.1
 
-  
 dev_dependencies:
-  build_runner: ^2.4.0
-  build_web_compilers: ^4.0.4
+  build_runner: ^2.5.4  # Actualizado
+  build_web_compilers: ^4.2.0  # Actualizado
   flutter_test:
     sdk: flutter
 
@@ -59,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
