--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ on:
     outputs:
       image-tag:
         description: "The tag of the built Docker image"
-        value: ${{ jobs.build.outputs.image-tag }}
+        value: ${{ jobs.docker.outputs.image-tag }}
 
 env:
   REGISTRY: ghcr.io
@@ -39,13 +39,15 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Build application
+      - name: Build application and download JDBC driver
         run: |
           cd decibelio
           ./mvnw clean package liberty:package
           mkdir -p target/lib
-          # Copy JDBC driver if needed
-          # cp path/to/postgresql.jar target/lib/
+          # Download PostgreSQL JDBC driver
+          wget -P target/lib/ https://jdbc.postgresql.org/download/postgresql-42.7.3.jar
+          # Verify the file exists
+          ls -la target/lib/
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
